# lab03-uml-relationships-xray

./: CMakeLists.txt  Carro.cpp  Carro.h  Motor.h  Persona.cpp  Persona.h  README.md  Transporte.cpp  Transporte.h  TransporteAcuatico.h  TransporteTerrestre.cpp  TransporteTerrestre.h  Trasporte.cpp  Trasporte.h  TrasporteAcuatico.h  TrasporteAereo.h  TrasporteAerio.h  TrasporteTerrestre.h
