cmake_minimum_required(VERSION 3.14)
project(lab03-uml-relationships-xray)

set(CMAKE_CXX_STANDARD 17)
add_executable(lab03-uml-relationships-xray Main.cpp Transporte.cpp Transporte.h TransporteTerrestre.cpp TransporteTtre.h TransporteAereo.cpp TransporteAereo.h TransporteAcuatico.cpp TransporteAcuatico.h Persona.cpp Persona.h Motor.cpp Motor.h Carro.cpp Carro.h Avion.cpp Avion.h Barco.cpp Barco.h )